Fix line clamp ellipsis with enough free space.

There is a special case in line clamp logic when a line has enough free space at the end. In this situation, a line has no truncation but still has an ellipsis. But all other logic didn't count on it.
This false assumption of truncation for ellipsis was removed from the code.

And fix braces in if's for 2+ lines bodies to be able to commit it.

Bug: 788141
Change-Id: I06893d47533031f79c610bd6f5258f7359f541f5