third_party/WebKit/Source/core/layout/LayoutText.cpp
@@ -569,9 +569,10 @@ CreatePositionWithAffinityForBoxAfterAdjustingOffsetForBiDi(
   DCHECK(box);
   DCHECK_GE(offset, 0);
 
-  if (offset && static_cast<unsigned>(offset) < box->Len())
+  if (offset && static_cast<unsigned>(offset) < box->Len()) {
     return CreatePositionWithAffinityForBox(box, box->Start() + offset,
                                             should_affinity_be_downstream);
+  }
 
   bool position_is_at_start_of_box = !offset;
   if (position_is_at_start_of_box == box->IsLeftToRightDirection()) {
@@ -580,9 +581,10 @@ CreatePositionWithAffinityForBoxAfterAdjustingOffsetForBiDi(
     const InlineBox* prev_box = box->PrevLeafChildIgnoringLineBreak();
     if ((prev_box && prev_box->BidiLevel() == box->BidiLevel()) ||
         box->GetLineLayoutItem().ContainingBlock().Style()->Direction() ==
-            box->Direction())  // FIXME: left on 12CBA
+            box->Direction()) {  // FIXME: left on 12CBA
       return CreatePositionWithAffinityForBox(box, box->CaretLeftmostOffset(),
                                               should_affinity_be_downstream);
+    }
 
     if (prev_box && prev_box->BidiLevel() > box->BidiLevel()) {
       // e.g. left of B in aDC12BAb
@@ -618,9 +620,10 @@ CreatePositionWithAffinityForBoxAfterAdjustingOffsetForBiDi(
   const InlineBox* next_box = box->NextLeafChildIgnoringLineBreak();
   if ((next_box && next_box->BidiLevel() == box->BidiLevel()) ||
       box->GetLineLayoutItem().ContainingBlock().Style()->Direction() ==
-          box->Direction())
+          box->Direction()) {
     return CreatePositionWithAffinityForBox(box, box->CaretRightmostOffset(),
                                             should_affinity_be_downstream);
+  }
 
   // offset is on the right edge
   if (next_box && next_box->BidiLevel() > box->BidiLevel()) {
@@ -682,10 +685,11 @@ PositionWithAffinity LayoutText::PositionForPoint(const LayoutPoint& point) {
           (blocks_are_flipped && point_block_direction == bottom)) {
         ShouldAffinityBeDownstream should_affinity_be_downstream;
         if (LineDirectionPointFitsInBox(point_line_direction.ToInt(), box,
-                                        should_affinity_be_downstream))
+                                        should_affinity_be_downstream)) {
           return CreatePositionWithAffinityForBoxAfterAdjustingOffsetForBiDi(
               box, box->OffsetForPosition(point_line_direction),
               should_affinity_be_downstream);
+        }
       }
     }
     last_box = box;
@@ -752,9 +756,10 @@ LayoutRect LayoutText::LocalCaretRect(
 
   // FIXME: should we use the width of the root inline box or the
   // width of the containing block for this?
-  if (extra_width_to_end_of_line)
+  if (extra_width_to_end_of_line) {
     *extra_width_to_end_of_line =
         (box->Root().LogicalWidth() + root_left) - (left + 1);
+  }
 
   LayoutBlock* cb = ContainingBlock();
   const ComputedStyle& cb_style = cb->StyleRef();
@@ -1230,11 +1235,12 @@ void LayoutText::ComputePreferredLogicalWidths(
             static_cast<unsigned>(text_direction);
         DCHECK_GE(text_direction_index, 0U);
         DCHECK_LE(text_direction_index, 1U);
-        if (!cached_word_trailing_space_width[text_direction_index])
+        if (!cached_word_trailing_space_width[text_direction_index]) {
           cached_word_trailing_space_width[text_direction_index] =
               f.Width(ConstructTextRun(f, &kSpaceCharacter, 1, style_to_use,
                                        text_direction)) +
               word_spacing;
+        }
         word_trailing_space_width =
             cached_word_trailing_space_width[text_direction_index];
       }
@@ -1259,16 +1265,17 @@ void LayoutText::ComputePreferredLogicalWidths(
                                  *hyphenation, i, word_len, suffix_start);
         if (suffix_start) {
           float suffix_width;
-          if (word_trailing_space_width && is_space)
+          if (word_trailing_space_width && is_space) {
             suffix_width =
                 WidthFromFont(f, i + suffix_start, word_len - suffix_start + 1,
                               lead_width, curr_max_width, text_direction,
                               &fallback_fonts, &glyph_bounds) -
                 word_trailing_space_width;
-          else
+          } else {
             suffix_width = WidthFromFont(
                 f, i + suffix_start, word_len - suffix_start, lead_width,
                 curr_max_width, text_direction, &fallback_fonts, &glyph_bounds);
+          }
           max_fragment_width = std::max(max_fragment_width, suffix_width);
           curr_min_width += max_fragment_width - w;
           max_word_width = std::max(max_word_width, max_fragment_width);
@@ -1288,12 +1295,13 @@ void LayoutText::ComputePreferredLogicalWidths(
         curr_min_width += w;
       }
       if (between_words) {
-        if (last_word_boundary == i)
+        if (last_word_boundary == i) {
           curr_max_width += w;
-        else
+        } else {
           curr_max_width += WidthFromFont(
               f, last_word_boundary, j - last_word_boundary, lead_width,
               curr_max_width, text_direction, &fallback_fonts, &glyph_bounds);
+        }
         last_word_boundary = j;
       }
 
@@ -1650,9 +1658,10 @@ void LayoutText::SetText(scoped_refptr<StringImpl> text, bool force) {
   // LayoutObjectChildList::insertChildNode() fails to set true to owner.
   // To avoid that, we call setNeedsLayoutAndPrefWidthsRecalc() only if this
   // LayoutText has parent.
-  if (Parent())
+  if (Parent()) {
     SetNeedsLayoutAndPrefWidthsRecalcAndFullPaintInvalidation(
         LayoutInvalidationReason::kTextChanged);
+  }
   known_to_have_no_overflow_and_no_fallback_fonts_ = false;
 
   if (AXObjectCache* cache = GetDocument().ExistingAXObjectCache())
@@ -1757,13 +1766,14 @@ float LayoutText::Width(unsigned from,
       if (fallback_fonts) {
         DCHECK(glyph_bounds);
         if (PreferredLogicalWidthsDirty() ||
-            !known_to_have_no_overflow_and_no_fallback_fonts_)
+            !known_to_have_no_overflow_and_no_fallback_fonts_) {
           const_cast<LayoutText*>(this)->ComputePreferredLogicalWidths(
               0, *fallback_fonts, *glyph_bounds);
-        else
+        } else {
           *glyph_bounds =
               FloatRect(0, -font_data->GetFontMetrics().FloatAscent(),
                         max_width_, font_data->GetFontMetrics().FloatHeight());
+        }
         w = max_width_;
       } else {
         w = MaxLogicalWidth();
@@ -2204,10 +2214,9 @@ void LayoutText::InvalidateDisplayItemClients(
 
   for (InlineTextBox* box : InlineTextBoxesOf(*this)) {
     paint_invalidator.InvalidateDisplayItemClient(*box, invalidation_reason);
-    if (box->Truncation() != kCNoTruncation) {
-      if (EllipsisBox* ellipsis_box = box->Root().GetEllipsisBox())
-        paint_invalidator.InvalidateDisplayItemClient(*ellipsis_box,
-                                                      invalidation_reason);
+    if (EllipsisBox* ellipsis_box = box->Root().GetEllipsisBox()) {
+      paint_invalidator.InvalidateDisplayItemClient(*ellipsis_box,
+                                                    invalidation_reason);
     }
   }
 }
